# greenisland

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  CONTRIBUTORS.md  COPYING.BSD  LICENSE  README.md
compositor/: CMakeLists.txt  main.cpp
data/cmake/: CMakeLists.txt  GreenIslandConfig.cmake.in
data/screen/: CMakeLists.txt  four-960x540.json  fullhd-hidpi.json  one-1024x768.json  one-1920x1080.json  one-960x540.json  phone-1080x1920.json  phone-720x1280.json  rotation-inverted.json  rotation-left.json  rotation-right.json  tablet-2048x1536.json  two-1024x768.json  two-rotated.json  two-uneven.json
declarative/: CMakeLists.txt  ShellSurfaceWindow.qml  SurfaceRenderer.qml  WaylandCursorItem.qml  WaylandScreen.qml  WaylandWindow.qml  WindowChrome.qml  WindowManager.qml  XdgPopupWindow.qml  XdgSurfaceWindow.qml  fpscounter.cpp  fpscounter.h  globalpointertracker.cpp  globalpointertracker.h  keybindingsfilter.cpp  keybindingsfilter.h  keyeventfilter.cpp  keyeventfilter.h  localpointertracker.cpp  localpointertracker.h  plugin.cpp  pointeritem.cpp  pointeritem.h  qmldir  quickkeybindings.cpp  quickkeybindings.h  waylandwindowitem.cpp  waylandwindowitem.h
declarative/client/: CMakeLists.txt  plugin.cpp  qmldir  waylandconnection.cpp  waylandconnection.h  waylandcursortheme.cpp  waylandcursortheme.h
declarative/compositor/: CMakeLists.txt  WaylandCursorItem.qml  WindowChrome.qml  plugin.cpp
declarative/xwayland/: CMakeLists.txt  XWaylandWindowChrome.qml  plugin.cpp  qmldir  sizehints.h  xcbatom.cpp  xcbatom.h  xcbatoms.cpp  xcbatoms.h  xcbcursors.cpp  xcbcursors.h  xcbproperties.cpp  xcbproperties.h  xcbresources.cpp  xcbresources.h  xcbwrapper.h  xwayland.cpp  xwayland.h  xwaylandmanager.cpp  xwaylandmanager.h  xwaylandquickshellintegration.cpp  xwaylandquickshellintegration.h  xwaylandquickshellsurfaceitem.cpp  xwaylandquickshellsurfaceitem.h  xwaylandserver.cpp  xwaylandserver.h  xwaylandshellsurface.cpp  xwaylandshellsurface.h
headers/GreenIsland/: CMakeLists.txt  Compositor  GreenIslandGlobal  SurfaceItem  Utilities  VCompositor  VCompositorPlugin  VGreenIslandGlobal  VIndicator  VIndicatorPlugin  VShell  VShellPlugin  cmakedirs.h.in  greenislandcompositor.h  greenislandglobal.h  greenislandutilities.h  vcompositor.h  vcompositorplugin.h  vgreenislandglobal.h  vindicator.h  vindicatorplugin.h  vshell.h  vshellplugin.h
launcher/: CMakeLists.txt  compositorlauncher.cpp  compositorlauncher.h  compositorprocess.cpp  compositorprocess.h  main.cpp
plugins/egldeviceintegration/: CMakeLists.txt
qpa/: CMakeLists.txt  greenisland.json  main.cpp
src/: CMakeLists.txt  GreenIslandConfig.cmake.in
src/client/: CMakeLists.txt  GreenIslandClientConfig.cmake.in  buffer.cpp  buffer.h  buffer_p.h  clientconnection.cpp  clientconnection.h  clientconnection_p.h  compositor.cpp  compositor.h  compositor_p.h  cursortheme.cpp  cursortheme.h  cursortheme_p.h  fullscreenshell.cpp  fullscreenshell.h  fullscreenshell_p.h  keyboard.cpp  keyboard.h  keyboard_p.h  output.cpp  output.h  output_p.h  outputconfiguration.cpp  outputconfiguration.h  outputconfiguration_p.h  outputmanagement.cpp  outputmanagement.h  outputmanagement_p.h  pointer.cpp  pointer.h  pointer_p.h  region.cpp  region.h  region_p.h  registry.cpp  registry.h  registry_p.h  screencaster.cpp  screencaster.h  (+21 more)
src/compositor/: CMakeLists.txt  bufferattacher.cpp  bufferattacher.h  cmakedirs.h.in  compositor.cpp  compositor.h  compositorapp.cpp  compositorapp.h  gldebug.cpp  globalregistry.cpp  globalregistry.h  globalshortcutsmanager.cpp  globalshortcutsmanager.h  greenisland.qrc  keybinding.cpp  keybinding.h  logging.cpp  logging.h  main.cpp  notifications.cpp  notifications.h  output.cpp  output.h  outputwindow.cpp  outputwindow.h  panelmanager.cpp  panelmanager.h  popupgrabber.cpp  popupgrabber.h  qmlcompositoritem.cpp  qmlcompositoritem.h  quicksurface.cpp  quicksurface.h  registration.cpp  registration.h  screen.cpp  screen.h  screenbackend.cpp  screenbackend.h  screenmanager.cpp  (+22 more)
src/declarative/: CMakeLists.txt  ClientWindowWrapper.qml  ContrastEffect.qml  SurfaceRenderer.qml  WindowItem.qml  fpscounter.cpp  fpscounter.h  plugin.cpp  qmldir  surfaceitem.cpp  surfaceitem.h
src/greenisland/: CMakeLists.txt  compositor.cpp  compositor.h  config.h.in  desktopshellserver.cpp  desktopshellserver.h  gitsha1.cpp.in  gitsha1.h  gitsha1.h.in  greenisland.cpp  greenisland.h  main.cpp
src/hardwareintegration/: CMakeLists.txt
src/imports/: CMakeLists.txt
src/launcher/: CMakeLists.txt  compositorlauncher.cpp  compositorlauncher.h  compositorprocess.cpp  main.cpp  processcontroller.cpp  processcontroller.h
src/libgreenisland/: CMakeLists.txt  GreenIslandConfig.cmake.in  GreenIslandConfigExtras.cmake  GreenIslandConfigExtrasLocal.cmake  GreenIslandMacros.cmake  abstractcompositor.cpp  abstractcompositor.h  abstractoutput.cpp  abstractoutput.h  abstractplugin.cpp  abstractplugin.h  abstractquickcompositor.cpp  abstractquickcompositor.h  applicationmanager.cpp  applicationmanager.h  applicationmanager_p.h  bufferattacher.cpp  bufferattacher.h  bufferref.cpp  bufferref.h  clientconnection.cpp  clientconnection.h  clientwindow.cpp  clientwindow.h  compositor.cpp  compositor.h  compositor_p.cpp  compositor_p.h  compositorsettings.cpp  compositorsettings.h  cursorbufferattacher_p.cpp  cursorbufferattacher_p.h  diagnostic_p.cpp  diagnostic_p.h  drag.cpp  drag.h  gldebug.cpp  gldebug.h  globalinterface.cpp  globalinterface.h  (+70 more)
src/package/: CMakeLists.txt  compositorpackage.cpp  compositorpackage.h  kpackage-packagestructure-greenisland.desktop  plasma-packagestructure-greenisland-compositor.desktop
src/platform/: CMakeLists.txt  GreenIslandPlatformConfig.cmake.in  logging.cpp  logging.h
src/plugins/: CMakeLists.txt
src/server/: CMakeLists.txt  GreenIslandServerConfig.cmake.in  GreenIslandServerMacros.cmake  abstractplugin.cpp  abstractplugin.h  applicationmanager.cpp  applicationmanager.h  bufferattacher.h  clientwindow.cpp  clientwindow.h  compositor.cpp  compositor.h  compositor_p.cpp  compositor_p.h  output.cpp  (+17 more)
(+983 files in other folders)
