if(ENABLE_EGLDEVICEINTEGRATION_KMS)
    add_subdirectory(kms)
endif()
add_subdirectory(wayland)
if(ENABLE_EGLDEVICEINTEGRATION_X11)
    add_subdirectory(x11)
endif()
if(ENABLE_EGLDEVICEINTEGRATION_BRCM AND BcmHost_FOUND)
    add_subdirectory(brcm)
endif()
if(ENABLE_EGLDEVICEINTEGRATION_MALI)
    add_subdirectory(mali)
endif()
if(ENABLE_EGLDEVICEINTEGRATION_VIV)
    add_subdirectory(viv)
endif()
